[package]
name = "bsmv"
version = "1.0.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Make BeatMap filenames readable again"

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
walkdir = "2.2.9"
zip = { version = "0.5.3", default-features = false, features = ["deflate"] }
